--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
     font-family: "Inter", serif;
-    background-color: #f5faff;
+    background-color: #f5faff !important;
 }
 
 .admin-sidebar a.active {
